fix about section spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -485,7 +485,7 @@ footer {
   }
 
   #about {
-    padding-top: 0%;
+    padding-top: 2%;
     width: 65%;
   }
 
